<resources>
    <string name="app_name">Motus Tracker</string>
    <string name="header_title">Motus Tracker</string>
    <string name="header_detail">Place, Time and Position Tracker</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="title_preferences">Application Settings</string>
    <string name="BUTTON_STATUS">BUTTON_STATUS</string>
    <string name="service_not_available">No geocoder available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="no_address_found">No location data provided</string>
    <string name="address_found">Address found</string>
    <string name="button_status">button_status</string>
    <string name="button_flag">button_flag</string>
    <string name="list_by_name">List By Date</string>
    <string name="list_by_time_spent">List By Location</string>
    <string name="details_for_db">details_for_database</string>
    <string name="address">address_for_database</string>
    <string name="time">time_duration</string>
    <string name="date">date_logged</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="location_unknown">Location Unknown</string>

    <string-array name="spinnerDropDown">
        <item>@string/list_by_name</item>
        <item>@string/list_by_time_spent</item>
    </string-array>

</resources>
