...
                android:layout_height="1dp"
                android:background="@color/divider" />

        </LinearLayout>

        <Button
            android:id="@+id/button"
            style="@style/btnStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="10dp"
            android:text="Start Tracking" />

    </LinearLayout>
</FrameLayout>

