<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="General" >
        <com.andela.motustracker.preference.NumberPickerPreference
            android:defaultValue="5"
            android:key="minimumTime"
            android:summary="5 Minutes"
            android:title="Tracking Time" />
    </PreferenceCategory>
</PreferenceScreen>